# sirius

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md
.github/workflows/: ci.yml
crates/sirius-diag/: Cargo.toml
crates/sirius-diag/src/: check.rs  config.rs  facts.rs  lib.rs  probes.rs  report.rs
crates/sirius-installer/: Cargo.toml  build.rs
crates/sirius-installer/src/: app.rs  config_model.rs  gui.rs  i18n.rs  logging.rs  main.rs  navigator.rs  style.rs
crates/sirius-installer/src/app/: pages.rs  state.rs
crates/sirius-installer/src/backend/: adapter.rs  distro.rs  mod.rs  network.rs  runner.rs  spawn.rs  storage.rs
crates/sirius-installer/src/pages/: diagnostics.rs  disk.rs  finished.rs  keyboard.rs  mod.rs  network.rs  partition.rs  progress.rs  storage.rs  summary.rs  timezone.rs  user.rs  welcome.rs
crates/sirius-installer/src/pages/progress/: bento.rs
crates/sirius-installer/src/pages/storage/: draft.rs  editor_view.rs  page_view.rs  partition_dialog.rs
crates/sirius-installer/tests/: vm_install.rs
data/: dev.luminusos.Sirius.desktop  dev.luminusos.Sirius.policy  distro.toml  io.sirius.Installer.desktop  io.sirius.Installer.policy  luminus.toml  sirius.toml  style.css
data/repart.d/: 20-root.conf
docs/: GAPS.md  driver-enablement-plan.md
po/: POTFILES  pt_BR.po  sirius.pot
