[workspace]
resolver = "2"
members = ["crates/sirius-diag", "crates/sirius-installer"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
relm4 = { version = "0.10", features = ["libadwaita", "gnome_45"] }
gtk4 = { version = "0.10", package = "gtk4" }
adw = { version = "0.8", package = "libadwaita" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"
