[workspace]
resolver = "2"
members = ["crates/sirius-diag", "crates/sirius-installer"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
clap = { version = "4", features = ["derive"] }
relm4 = { version = "0.10", features = ["libadwaita", "gnome_45"] }
gtk4 = { version = "0.10", package = "gtk4" }
adw = { version = "0.8", package = "libadwaita", features = ["v1_5"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
zbus = "5"
zvariant = "5"
# Uses the LuminusOS fork while upstream fixes required by Sirius are pending.
# `default-features = false` disables the `uutils` feature, which pulls in
# `uu_cp`/`exacl` and forces linking against `libacl.so` (the `libacl-devel`
# system package, absent on this host). It only gates one of three copy backends
# (`copy_dir_uutils`); the default copy method is the native `rdm` implementation,
# so dropping it does not affect the install path we need.
libreadymade = { git = "https://github.com/luminusOS/readymade.git", rev = "c58f56daa25463c660a1488bce5e5a45f0328c2b", default-features = false }
