[package]
name = "sirius-diag"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
# Check labels/details are user-facing: resolve them through the process
# textdomain ("sirius", initialized by the installer binary) at probe time.
gettext-rs = { workspace = true }
