[package]
name = "sirius-installer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sirius"
path = "src/main.rs"

[dependencies]
sirius-diag = { path = "../sirius-diag" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
relm4 = { workspace = true }
gtk4 = { workspace = true }
adw = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libreadymade = { workspace = true }
